[package]
name = "theca"
version = "2.0.0"
authors = ["Roland Shoemaker <roland@bind.es>", "Paul Woolcock <paul@woolcock.us>"]
license = "MIT"
description = """
a simple, fully featured, command line note taking tool
"""
homepage = "https://pwoolcoc.github.io/theca"
repository = "https://github.com/pwoolcoc/theca"
edition = "2021"

[lib]
name = "theca"
path = "src/theca/lib.rs"

[[bin]]
name = "theca"
test = false
doc = false

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"
tempfile = "3.10"
libc = "0.2"
crossterm = "0.27"
base64 = "0.22"
dirs = "5.0"
regex = "1.10"

# Optional/Dev dependencies can be added here if needed
